Update and rename 4장 종합연습문제 to 4장 종합연습문제.md

--- a/Database/연습문제/4장 종합연습문제.md
+++ b/Database/연습문제/4장 종합연습문제.md
@@ -36,3 +36,8 @@ where E.SAL > (
     from EMP E2
     where E2.DEPTNO = E.DEPTNO
 );
+#6번
+<img width="170" height="78" alt="exam6-1" src="https://github.com/user-attachments/assets/bae2d36f-acd0-4f9a-b3c1-845938768913" />
+<img width="227" height="63" alt="exam6-2" src="https://github.com/user-attachments/assets/f04ca484-2e27-4f5d-8602-0437c074c7a9" />
+
+
